--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,10 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300%family=Oswald:wght@200..700&display=swap');
+
 * {
-    padding:0;
+    padding: 0;
     margin: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
 
 }
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles*/
+    color: #3a3a3a;
+    font-family: 'Lato',sans-serif;
+
+}
 
 header {
     background-color:lightcoral;
@@ -12,8 +23,13 @@ header {
 
 main {
     background-color: lightblue;
+    /* Make main element take up anu surplus space to push footer down*/
+    flex: 1 0 auto;
+
+
 }
 
 footer {
     background-color:orange;
+
 }
