--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -13,7 +13,7 @@ body {
     flex-direction: column;
     /* Generic project styles*/
     color: #3a3a3a;
-    font-family: 'Lato',sans-serif;
+    font-family: 'Lato', sans-serif;
 
 }
 
@@ -21,9 +21,14 @@ header {
     background-color:lightcoral;
 }
 
+
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 main {
     background-color: lightblue;
-    /* Make main element take up anu surplus space to push footer down*/
+    /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
 
 
