--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,40 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300%family=Oswald:wght@200..700&display=swap');
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 
+/* General styles */
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    /* Generic project styles*/
+    /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
-
 }
-
-header {
-    background-color:lightcoral;
-}
-
 
 h1 {
     font-family: 'Oswald', sans-serif;
 }
 
-main {
-    background-color: lightblue;
-    /* Make main element take up any surplus space to push footer down*/
-    flex: 1 0 auto;
-
-
+/* Header */
+header {
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
-footer {
-    background-color:orange;
+/* Main content */
+main {
+    background-color: lightblue;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+}
 
+/* Footer */
+footer {
+    background-color: orange;
 }
