hide nav bar and styled navbar

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -67,3 +67,16 @@ footer {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+/* navbar stykes with dropdown toggle8*/
+
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    padding: 0 1rem;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display:none;
+}
