--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -48,6 +48,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
@@ -96,5 +97,5 @@ nav {
 
 .nav-toggle-label {
     font-size: 2rem;
-    
+
 }
