--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -51,6 +51,13 @@ main {
     margin-top: 40px;
 }
 
+/* Hero Section */
+#hero {
+    height: 950px;
+    width: 100%;
+    background: url("../images/hero-image\ \(1\).webp") no-repeat center center/cover;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
