--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -97,6 +97,23 @@ main {
     position: relative;
 }
 
+#circle-cover-bg {
+    background: url("../images/reasons-image\ \(1\).webp") no-repeat center center/cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
