--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -157,6 +157,29 @@ main {
     margin: 5px 0;
 }
 
+#times {
+    background: url("../images/dublin-city.webp") no-repeat center center/cover;
+    display:flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    text-align: center;
+    padding: 15px;
+    text-align: center; 
+    flex-basis: 200px;
+    flex-grow: 1;
+    border: 2px solid white;
+
+}
+
+#times h3 {
+     /* Overide the heading */
+    color:#fafafa
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
