increase gallery columns on larger screens

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -209,6 +209,14 @@ main {
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -257,6 +265,12 @@ main {
         align-self: flex-end;
     }
 
+     /* Gallery */
+    #photos {
+        column-count: 3;
+    }
+}
+
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
@@ -275,7 +289,13 @@ main {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
+
+     /* Gallery */
+    #photos {
+        column-count: 4;
+    }
 }
+
 
 @media screen and (min-width: 1200px) {    
     /* Reasons section */
